--- a/app/views/authors/posts/_form.html.erb
+++ b/app/views/authors/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(post) do |f| %>
+<%= form_for(post, url: url) do |f| %>
   <% if post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -16,6 +16,11 @@
     <%= f.text_field :title %>
   </div>
 
+  <div class="field">
+    <%= f.label :banner_image_url %>
+    <%= f.text_area :banner_image_url %>
+  </div>
+  
   <div class="field">
     <%= f.label :body %>
     <%= f.text_area :body %>
