--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,14 @@
 				<li class="list-group-item">
 					<%= link_to "Contact", contact_path, class:"nav-link #{yield(:contact_active)}" %>
 				</li>
+				<% if author_signed_in? %>
+				 <li class="list-group-item">
+					<%= link_to "My Posts", authors_posts_path, class:"nav-link #{yield(:author)}" %>
+				 </li>
+	 			<li class="nav-item">
+	 				<%= link_to "Log Out", destroy_author_session_path, method: :delete, class:"nav-link #{yield(:author)}" %>
+	 			</li>
+				 <% end %>
 			</ul>
 		</div>
 	</div>
@@ -30,9 +38,14 @@
 			<li class="nav-item">
 				<%= link_to "About", about_path, class:"nav-link #{yield(:about_active)}" %>
 			</li>
+			<% if author_signed_in? %>
 			<li class="nav-item">
-				<%= link_to "Contact", contact_path, class:"nav-link #{yield(:contact_active)}" %>
+				<%= link_to "My Posts", authors_posts_path, class:"nav-link #{yield(:author)}" %>
 			</li>
+			<li class="nav-item">
+				<%= link_to "Log Out", destroy_author_session_path, method: :delete, class:"nav-link #{yield(:author)}" %>
+			</li>
+			 <% end %>
 		</ul>
 	</div>
 </nav>
